crates/core/dep-graph/tests/snapshots/dep_graph_test__sync_project__avoids_dupe_projects.snap
---
source: crates/core/dep-graph/tests/dep_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="SetupNodeTool(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="SyncNodeProject(advanced)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 -> 1 [ arrowhead=box, arrowtail=box]
}

