crates/core/dep-graph/tests/snapshots/dep_graph_test__sync_project__projects_with_tasks.snap
---
source: crates/core/dep-graph/tests/dep_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="SetupSystemTool" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="SyncSystemProject(noConfig)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="SetupNodeTool(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="SyncNodeProject(tasks)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 -> 1 [ arrowhead=box, arrowtail=box]
    4 -> 3 [ arrowhead=box, arrowtail=box]
}

